--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.scss" />
   </head>
-  <body></body>
+  <body>
+    <header class="header"></header>
+    <main class="main"></main>
+    <footer class="footer"></footer>
+  </body>
 </html>
